<resources>
    <string name="app_name">MeteoApp</string>
    <string name="l_isola_che_non_c">L\'Isola che non c\'è</string>
    <string name="stubofforecast">stubOfForecast</string>
    <string name="textview">TextView</string>
    <string name="aggiorna">Aggiorna</string>
    <string name="trovami">Trovami</string>
    <string name="cerca">Cerca</string>
    <string name="searchnewlocation">SearchNewLocation</string>
    <string name="parzialmente_soleggiato_con_un_tocco_di_nuvole_e_probabile_pioggia">Parzialmente Soleggiato con un tocco di nuvole e probabile pioggia</string>
    <string name="forceupdateofgpsforecast">ForceUpdateOfGPSForecast</string>
    <string name="updateforecast">UpdateForecast</string>
    <string name="attualmente_0_c">Attualmente: 0°C</string>
    <string name="def_att">0</string>
    <string name="maxDESC">Massime:</string>
    <string name="attDESC">Attuale:</string>
    <string name="minDESC">Minime:</string>
    <string name="def_min">-100</string>
    <string name="def_max">100</string>
    <string name="newItem">New</string>
    <string name="tienimi_aggiornato">Tienimi aggiornato</string>
    <string name="notificationChannel">WheaterApp</string>
    <string name="notificationChannelDesc">Notifiche di WheaterApp</string>
</resources>
