<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/cerca"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_item_detect_pos"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:title="@string/trovami"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_item_update"
        android:icon="@android:drawable/stat_notify_sync_noanim"
        android:title="@string/aggiorna"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_item_addUpdates"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/tienimi_aggiornato"
        app:showAsAction="ifRoom" />
</menu>